# locomotive

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/actions/loadtest/: action.yml
.github/workflows/: release.yml  tests.yml
docs/: generate_artifacts.py  report-branded.json  report-dark-custom.json  report-dark.json  report-default-light.json  report-errors.json  report-latency.json  report-throughput.json  report-trends.json
docs/artifacts/: baseline.json  history.json
docs/artifacts/runs/baseline/: metrics.json  run.json
docs/artifacts/runs/baseline/raw/: locust_stats.csv  locust_stats_history.csv
docs/artifacts/runs/run-degrade/: analysis.json  metrics.json  run.json
docs/artifacts/runs/run-degrade/raw/: locust_stats.csv  locust_stats_history.csv
docs/artifacts/runs/run-pass/: analysis.json  metrics.json  run.json
docs/artifacts/runs/run-pass/raw/: locust_exceptions.csv  locust_stats.csv  locust_stats_history.csv
docs/artifacts/runs/run-warn/: analysis.json  metrics.json  report.html  run.json
docs/artifacts/runs/run-warn/raw/: locust_stats.csv  locust_stats_history.csv
docs/images/: report-branded.html  report-dark-custom.html  report-dark.html  report-default-light.html  report-errors.html  report-throughput.html  report-trends.html
locomotive/: cli.py  config.py  gate.py  scenario.py  template.py
tests/: conftest.py  test_analyzer.py  test_cli.py  test_config.py  test_gate.py  test_launcher.py  test_report_config.py  test_reporter.py  test_scenario.py  test_storage.py  test_template.py
